--- a/1.3.3/buildout.cfg
+++ b/1.3.3/buildout.cfg
@@ -28,7 +28,7 @@ auto-checkout = *
 always-checkout = true
 
 [sources]
-ehaclinics.lims = git https://ehealthafrica-ci:ca921cdf0867cabb1a2e531acf776c69e32e4fac@github.com/eHealthAfrica/ehaclinics.lims.git branch=master
+ehaclinics.lims = git https://ehealthafrica-ci:api-token@github.com/eHealthAfrica/ehaclinics.lims.git branch=master
 senaite.api = git git://github.com/senaite/senaite.api.git branch=master
 senaite.autopublish = git git://github.com/senaite/senaite.autopublish.git branch=master
 senaite.core = git git://github.com/senaite/senaite.core.git branch=master
